--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@
 
   .logo {
     position: absolute;
-    left: 0;
-    right: 0;
   }
   
   .center {
@@ -49,6 +47,7 @@
     margin: auto;
     width: 75%;
     flex-wrap: wrap;
+    padding: 10px;
 }
 
 .flex-child {
@@ -74,7 +73,6 @@
     font-size: 16px;
     padding: 16px 30px;
     text-align: center;
-    display: inline-block;
     cursor: pointer;
 }
 
